# cloudwatch-logs-upload

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: upload.rs
src/: lib.rs
