[package]
name = "cloudwatch-logs-upload"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
fehler = "1.0"
thiserror = "1.0"

# TODO: stay on 0.42 for now because it provides a convenient
# synchronous interface.
rusoto_core = { version = "0.42", default_features = false, features = ["rustls"] }
rusoto_logs = { version = "0.42", default_features = false, features = ["rustls"] }
