[badges.maintenance]
status = "deprecated"

[package]
name = "cloudwatch-logs-upload"
version = "0.6.2"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2021"
description = "Library for uploading events to AWS CloudWatch Logs"
keywords = ["aws", "cloudwatch", "logs"]
repository = "https://github.com/nicholasbishop/cloudwatch-logs-upload"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
fehler = "1.0.0"
log = "0.4.14"
thiserror = "1.0.30"

# TODO: stay on 0.42 for now because it provides a convenient
# synchronous interface.
rusoto_core = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_logs = { version = "0.42.0", default_features = false, features = ["rustls"] }

[dev-dependencies]
rand = "0.8.4"
simple_logger = "1.13.0"
